@@ -9,18 +9,22 @@
 i18n_us_lang = us
 i18n_us_keyb = US
 i18n_us_cset = ST
+i18n_us_idt  = IDT_12H | IDT_MMDDYY | '/'
 
 i18n_de_lang = de
 i18n_de_keyb = DE
 i18n_de_cset = ST
+i18n_de_idt  = IDT_24H | IDT_DDMMYY | '/'
 
 i18n_fr_lang = fr
 i18n_fr_keyb = FR
 i18n_fr_cset = ST
+i18n_fr_idt  = IDT_24H | IDT_DDMMYY | '/'
 
 i18n_cz_lang = cs
 i18n_cz_keyb = CZ
 i18n_cz_cset = L2
+i18n_cz_idt  = IDT_24H | IDT_DDMMYY | '/'
 
 COUNTRIES = us de fr cz
 
@@ -32,8 +36,8 @@ ETOSCSET = $(i18n_$(COUNTRY)_cset)
 
 #
 
-FONTOBJ_ST = fnt6x6.o fnt8x8.o fnt8x16.o
-FONTOBJ_L2 = fntlat2_6.o fntlat2_8.o fntlat2_16.o
+FONTOBJ_ST = fnt_st_6x6.o fnt_st_8x8.o fnt_st_8x16.o 
+FONTOBJ_L2 = fnt_l2_6x6.o fnt_l2_8x8.o fnt_l2_8x16.o
 FONTOBJ_ALL = $(FONTOBJ_ST) $(FONTOBJ_L2)
 
 ifneq (,$(UNIQUE))
