@@ -30,14 +30,14 @@ Where is it in the code
 
 - keyboard: 
   bios/country.h holds #defines for the keyboard codes;
-  bios/kbd_* contain the actual kbd layouts
+  bios/keyb_* contain the actual kbd layouts
   bios/country.c contains the logic to choose the keyboard to use.
 
 - charset:
   bios/country.h holds #defines for the charset codes;
 
 - font:
-  bios/*6x6.c, bios/*8x8.c and bios/*8x16.c contain the fonts
+  bios/fnt*6x6.c, bios/fnt*8x8.c and bios/fnt*8x16.c contain the fonts
   bios/country.c contains the logic to choose the fontsets to use.
 
 - date&time:
@@ -46,8 +46,10 @@ Where is it in the code
 How is it set?
 --------------
 
-bios/country.c contains the values of language, keyboard, charset and
-IDT for each known country.
+country.mk contains the values of language, keyboard, charset and
+IDT for each known country. tables derived from this information are
+generated by tools/genctables.awk into bios/ctables.h, the latter file
+being included in bios/country.c
 
 function detect_akp_idt() is called early in the boot sequence (from
 detect(), when filling the cookie jar). See in bios.c:
@@ -76,23 +78,27 @@ New country check list
 
 - if the country is not known (in bios/country.h),
   - add a code in bios/country.h and in tools/mkheader.c
-- add a line in the table in bios/country.c
+- add suitable lines in the tables in country.mk
 - if a specific charset is needed, 
+  - find a two letter/digits name for this charset
   - add a line in the charset table in bios/country.h
   - provide C source code fonts for this charset (you may use 
     tool fntconv to create the C files, available from Laurent's 
-    page at http://lvogel.free.fr).
+    page at http://lvogel.free.fr). The files should be named
+    bios/fnt_xx_6x6.c, bios/fnt_xx_8x8.c and bios/fnt_xx_8x16.c, 
+    where xx is the charset name; each should define a struct 
+    font_head which has the same name as the file's without extension.
     => IMPORTANT NOTICE: the GEM will crash if the values in the 
     => font header are not as follow: 
     =>    font_id = 1
     =>    flags = F_STDFORM | F_DEFAULT | F_MONOSPACE
   - add the new C source codes to the Makefile
-  - update the font table in bios/country.c
+  - update the font table in country.mk
   - check if this charset is known by GNU recode and if not
     - send mail to the GNU recode maintainer (!)
   - see chapter 'charsets' of doc/nls.txt 
 - if a specific keyboard is needed,
-  - add it in bios/country.c (follow instructions there)
+  - add its name in bios/country.h
   - provide the keyboard layout in a file bios/keyb_*.h
     (you may use supplied tool dumpkbd.prg to generate such a file from an
     existing atari ST with the correct keyboard)
